# Viper

./: .buildinfo  .gitignore  .gitmodules  CNAME  _config.yml  _toc.yml  _using_notebooks.html  genindex.html  intro.html  intro.md  introduction.html  markdown.html  mate_desktop.html  notebooks.html  objective.html  objective.md  objects.inv  readme.html  requirements.txt  search.html  searchindex.js
_build/.doctrees/: _using_notebooks.doctree  environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree  readme.doctree
_build/.doctrees/another_folder/: chapter3.doctree  somemore.doctree
_build/.doctrees/docs/: Hardware.doctree  ros_structure.doctree
_build/html/: .buildinfo  _using_notebooks.html  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  readme.html  search.html  searchindex.js
_build/html/_sources/: _using_notebooks.ipynb  readme.md
_build/html/docs/: ros_structure.html
_build/jupyter_execute/: _using_notebooks.ipynb  _using_notebooks.py  notebooks.ipynb
_sources/: intro.md  introduction.md  notebooks.ipynb  objective.md
_sources/another_folder/: chapter3.md
_sources/docs/: Hardware.md  ros_structure.md
_sources/src/augmented_vr_module/: augmented_vr_module.ipynb  readme.md
_sources/src/image_server/: image_server.ipynb
_sources/src/inland_ir_cam/: readme.md
_sources/src/model_server/: Model Server Python Scripts.ipynb  model_server.ipynb  model_server_modules.ipynb
_sources/src/pose_detection_module/: Scene Segmentation Module.ipynb  example.ipynb  pose_detection_model.ipynb  pose_detection_module.ipynb  pose_detection_modules.ipynb
_sources/src/scene_segmentation_module/: example.ipynb  readme.md  scene_segmentation_model.ipynb  scene_segmentation_module.ipynb
_sources/src/viper_toolkit/: logger.ipynb  parameter_manager.ipynb  process_timer.ipynb  sample_publisher.ipynb  sample_subscriber.ipynb  viper_toolkit_python_modules.ipynb
another_folder/: chapter3.html  somemore.html
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/inland_ir_cam/: CameraConfig.h  MotionVectors.h
devel/lib/image_server/: image_server.py
docs/: Hardware.html  Hardware.md  Software.html  _config.yml  _toc.yml  communication_diagram.html  communication_diagram.ipynb  process_diagram.html  process_diagram.ipynb  ros_structure.html  ros_structure.md
src/: readme.html
src/augmented_vr_module/: CMakeLists.txt  augmented_vr_module.html  augmented_vr_module.ipynb  readme.html  setup.py
src/augmented_vr_module/launch/: augmented_vr.launch
src/augmented_vr_module/scripts/: augmented_vr.py
src/augmented_vr_module/src/augmented_vr_module/: __init__.py
src/image_server/: CMakeLists.txt  image_server.html  image_server.ipynb  image_server_client.html  image_server_client.ipynb  package.xml  readme.html  readme.md
src/image_server/.ipynb_checkpoints/: scenesegmentation-checkpoint.ipynb
src/image_server/launch/: image_kit.launch  image_server.launch
src/image_server/scripts/: image_server  image_server.py
src/image_server/src/image_server/: ImageServerClient.py  __init__.py
src/inland_ir_cam/: CHANGELOG.html  README.html  readme.html
src/model_server/: CMakeLists.txt  model_server.html  neural_network_loader.html  neural_network_loader.ipynb  readme.html
src/model_server/launch/: model_kit.launch  model_server.launch
src/model_server/msg/: InferenceResults.msg
src/model_server/src/model_server/: __init__.py  neuralnetworkloader.py  vipermodel.py
src/model_server/srv/: ImageRequest.srv  ModelRequest.srv
src/pose_detection_module/: CMakeLists.txt  Scene Segmentation Module.html  Untitled.html  example.html  package.xml  pose_detection_model.html  pose_detection_model.ipynb  pose_detection_module.html  pose_detection_module.ipynb  pose_detection_modules.html  readme.html
src/pose_detection_module/launch/: pose_detection_module.launch
src/pose_detection_module/scripts/: pose_detection_module.py
src/pose_detection_module/scripts/.ipynb_checkpoints/: Pose Articulator-checkpoint.ipynb
src/pose_detection_module/src/pose_detection_module/: __init__.py  draw_poses.py  heatmaptools.py  openposedecoder.py  posedetectionmodel.py
src/scene_segmentation_module/: CMakeLists.txt  Pose Detection Module Python Modules.ipynb  Untitled.html  example.html  package.xml  readme.html  scene_segmentation_model.html  scene_segmentation_model.ipynb  scene_segmentation_module.html  scene_segmentation_module.ipynb  scene_segmentation_modules.html  setup.py
src/scene_segmentation_module/launch/: scene_segmentation.launch
src/scene_segmentation_module/scripts/: SEG_debugger.py  scene_segmentation_module_node.py
src/scene_segmentation_module/src/scene_segmentation_module/: __init__.py  scenesegmentationmodel.py  utilities.py
src/viper_toolkit/: CMakeLists.txt  Viper Toolkit Python Modules.html  Viper Toolkit Python Modules.ipynb  dissector.html  dissector.ipynb  logger.html  name_manager.html  name_manager.ipynb  parameter_manager.html  parameter_manager.ipynb  process_timer.html  readme.html  readme.md  sample_publisher.html  sample_publisher.ipynb  sample_subscriber.html  sample_subscriber.ipynb  setup.py  viper_toolkit_python_modules.html
src/viper_toolkit/script/: subscriber.py
src/viper_toolkit/src/viper_toolkit/: __init__.py  dissector.py  logger.py  name_manager.py  parameter_manager.py  process_timer.py
(+143 files in other folders)
