<?xml version="1.0"?>
<package format="2">
  <name>scene_segmentation_module</name>
  <version>0.5.0</version>
  <description>The scene_segmentation_module package</description>
  <maintainer email="adamico@ieee.org">Andrew Damico</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>model_server</exec_depend>
  <exec_depend>image_server</exec_depend>
</package>
